creusot/tests/should_fail/prusti/deref/make_ref.stderr
error[creusot]: expected `&std::boxed::Box<(u32, u32)>` found `&'curr creusot_contracts::__stubs::__prusti::Zombie<std::boxed::Box<(u32, u32)>>`
  --> make_ref.rs:14:20
   |
14 | #[ensures({let x = x.mk_ref(); x.0 == result})]
   |                    ^

error: aborting due to previous error

